# omniarc

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  config.example.json  llm_endpoints.example.json  macos.dry-run.json  macos.maps-zoom.json  macos.page-scroll.json  macos.page-zoom.json  windows.dry-run.json
omniarc/: __main__.py  runtime_runner.py
omniarc/core/: __init__.py  actor.py  agent.py  brain.py  composite_planner.py  errors.py  memory.py  models.py  planner.py  planner_service.py  preplan_service.py  protocols.py  recovery.py  state.py  verifier.py
omniarc/core/skills/: __init__.py  loader.py  schema.py  selector.py
omniarc/integrations/mcp/: __init__.py  bridge.py  jobs.py  server.py
omniarc/integrations/openclaw/: __init__.py  export.py
omniarc/llm/: __init__.py  client.py  config.py  types.py
omniarc/llm/providers/: __init__.py  anthropic.py  base.py  openai.py  openai_compatible.py
omniarc/runtimes/base/: __init__.py  capabilities.py
omniarc/runtimes/macos/: __init__.py  executor.py  observer.py  permissions.py
omniarc/storage/: __init__.py  runs.py  status.py
skills/: browser.md  messaging.md  search.md
tests/: test_import.py  test_readme.py  test_readme_llm.py  test_runtime_runner.py
tests/core/: test_agent_flow.py  test_composite_planner.py  test_decision_chain.py  test_models.py  test_planner.py  test_protocols.py  test_recovery.py  test_verifier.py
tests/examples/: test_example_assets.py
tests/integrations/: test_exports.py
tests/llm/: test_config.py  test_providers.py
tests/storage/: test_runs.py
(+15 files in other folders)
